[package]
name = "openapi"
version = "2.0.0"
authors = ["davisjam@purdue.edu"]
description = "API for ECE 461/Spring 2023/Project 2: A Trustworthy Module Registry"
license = "Apache 2.0"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
